--- a/applicants.json
+++ b/applicants.json
@@ -1,7 +1,7 @@
 [
     {
         "title": "AI DESIGNER",
-        "country_select": "Austria",
+        "Location of Residence and Language:": "Austria",
         "question": {
             "First Name*": "John",
             "Last Name*": "Asghar",
@@ -24,7 +24,7 @@
     },
     {
         "title": "3D CAD DESIGNER",
-        "country_select": "Austria",
+        "Location of Residence and Language:": "Austria",
         "question": {
             "First Name*": "John",
             "Last Name*": "Asghar",
